2011-04-08
        V01-00-00 Srecko
	Initial version committed to CVS (by Luis)
2011-03-09
	V00-00-02
	Prepared a version for testing in the Integration System
2011-02-29 Srecko Morovic <srecko.morovic@cern.ch>
	V00-00-01
	Initial version of DQM Event Processor based on
	evf::FUEventProcessor
